--- a/src/blocks/block-grid-container/styles/editor.scss
+++ b/src/blocks/block-grid-container/styles/editor.scss
@@ -93,10 +93,10 @@
 	z-index: 24;
 }
 
-.c9-grid>.editor-inner-blocks {
+.c9-grid>.block-editor-inner-blocks {
 	height: 100%;
 
-	>.editor-block-list__layout {
+	>.block-editor-block-list__layout {
 		display: grid;
 		height: 100%;
 		-webkit-box-pack: center;
@@ -188,37 +188,37 @@
 	margin-right: auto;
 }
 
-.container .row .editor-inner-blocks,
-.container-fluid .row .editor-inner-blocks,
-.container-narrow .row .editor-inner-blocks {
+.container .c9-layout-column-wrap-admin .block-editor-inner-blocks,
+.container-fluid .c9-layout-column-wrap-admin .block-editor-inner-blocks,
+.container-narrow .rc9-layout-column-wrap-admin .block-editor-inner-blocks {
 	width: 100%;
 }
 
-.container .row>.editor-inner-blocks>.editor-block-list__layout,
-.container-narrow .row>.editor-inner-blocks>.editor-block-list__layout,
-.container-fluid .row>.editor-inner-blocks>.editor-block-list__layout {
+.container .c9-layout-column-wrap-admin>.block-editor-inner-blocks>.block-editor-block-list__layout,
+.container-narrow .c9-layout-column-wrap-admin>.block-editor-inner-blocks>.block-editor-block-list__layout,
+.container-fluid .c9-layout-column-wrap-admin>.block-editor-inner-blocks>.block-editor-block-list__layout {
 	width: 100%;
 	display: -webkit-box;
 	display: flex;
 }
 
-.container .row>.editor-inner-blocks>.editor-block-list__layout .editor-block-list__block,
-.container-narrow .row>.editor-inner-blocks>.editor-block-list__layout .editor-block-list__block,
-.container-fluid .row>.editor-inner-blocks>.editor-block-list__layout .editor-block-list__block {
+.container .c9-layout-column-wrap-admin>.block-editor-inner-blocks>.block-editor-block-list__layout .block-editor-block-list__block,
+.container-narrow .c9-layout-column-wrap-admin>.block-editor-inner-blocks>.block-editor-block-list__layout .block-editor-block-list__block,
+.container-fluid .c9-layout-column-wrap-admin>.block-editor-inner-blocks>.block-editor-block-list__layout .block-editor-block-list__block {
 	-webkit-box-flex: 1;
 	flex-grow: 1;
 	flex-basis: 0px;
 }
 
-.c9-block-layout-column .editor-block-list__block[data-align="full"],
-.c9-block-layout-column .editor-block-list__block[data-align="wide"] {
+.c9-block-layout-column .wp-block[data-align="full"],
+.c9-block-layout-column .wp-block[data-align="wide"] {
 	margin-left: auto;
 	margin-right: auto;
 }
 
 /*c9 column container innerblocks set to full width + innerblock full width */
-.wp-block[data-type="c9-blocks/grid"] .editor-inner-blocks,
-.wp-block[data-type="c9-blocks/grid"]>.editor-inner-blocks>.editor-block-list__layout {
+.wp-block[data-type="c9-blocks/grid"] .block-editor-inner-blocks,
+.wp-block[data-type="c9-blocks/grid"]>.block-editor-inner-blocks>.block-editor-block-list__layout {
 	width: 100%;
 	z-index: 10;
 	position: relative;
@@ -368,7 +368,7 @@
 @media only screen and (min-width: 600px) {
 
 	//setting the outer .c9-grid container width for the main blocks window when all admin sidebars are hidden or collapsed
-	.edit-post-layout .editor-block-list__layout .wp-block[data-type="c9-blocks/grid"] {
+	.edit-post-layout .block-editor-block-list__layout .wp-block[data-type="c9-blocks/grid"] {
 		width: 100%;
 		margin-top: 16px;
 		margin-bottom: 16px;
@@ -417,8 +417,8 @@
 	}
 
 	//max width of inner containers is 100% of the available space of the .c9-grid
-	body .is-sidebar-opened .editory-styles-wrapper .wp-block[data-type="c9-blocks/grid"] .c9-grid>.block-editor-inner-blocks,
-	.edit-post-layout:not(.is-sidebar-opened) .editory-styles-wrapper .wp-block[data-type="c9-blocks/grid"] .c9-grid>.block-editor-inner-blocks {
+	body .is-sidebar-opened .editor-styles-wrapper .wp-block[data-type="c9-blocks/grid"] .c9-grid>.block-editor-inner-blocks,
+	.edit-post-layout:not(.is-sidebar-opened) .editor-styles-wrapper .wp-block[data-type="c9-blocks/grid"] .c9-grid>.block-editor-inner-blocks {
 		max-width: 100%;
 	}
 
@@ -545,7 +545,7 @@
 		width: calc(100% + 88px);
 	}
 
-	.c9-grid>.editor-inner-blocks>.editor-block-list__layout {
+	.c9-grid>.block-editor-inner-blocks>.block-editor-block-list__layout {
 		-webkit-box-pack: center;
 		justify-content: center;
 	}
